# alpaca2

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
alembic/: env.py
alembic/versions/: 1a35e4e35ca6_initial_schema.py  7e6836c65cc3_add_conference_edition_dates.py  892b23745c2e_add_paper_resources_and_change_log.py  abc8437c0982_add_personal_calendar_events.py  b2c3d4e5f6a7_add_error_log.py
app/: config.py  database.py  dependencies.py  main.py  scimago.py  wikicfp.py
app/models/: __init__.py  affiliation.py  author.py  calendar.py  conference.py  error_log.py  group.py  journal.py  paper.py  scholar.py  user.py
app/routers/: admin.py  affiliations.py  auth.py  authors.py  calendar.py  collaborators.py  conferences.py  dashboard.py  groups.py  journals.py  papers.py  partials.py  scholar.py
app/templates/: base.html
app/templates/admin/: error_log.html  index.html
app/templates/affiliations/: detail.html  form.html  list.html
app/templates/auth/: login.html  register.html
app/templates/authors/: detail.html  form.html  list.html
app/templates/calendar/: index.html
app/templates/collaborators/: index.html
app/templates/conferences/: detail.html  edition_form.html  form.html  list.html  wikicfp_preview.html
app/templates/dashboard/: index.html
app/templates/errors/: 403.html  404.html  500.html
app/templates/groups/: detail.html  form.html  list.html
scripts/: copy-assets.js  import_crawl_data.py
static/css/: alpaca.css  themes.css
static/js/: alpaca.js
(+11 files in other folders)
