[project]
name = "alpaca"
version = "0.1.0"
description = "Academic Administration, knowLedge base, Paper organization And Collaboration Assistant"
requires-python = ">=3.13"
dependencies = [
    "aiomysql>=0.3.2",
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "beautifulsoup4>=4.14.3",
    "bleach>=6.3.0",
    "fastapi[standard]>=0.135.1",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pydantic-settings>=2.13.1",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.48",
]
